# libvirtdma

./: .gitignore  Cargo.toml  Makefile  README.md  ghidrabridge.py  idabridge.py
examples/: kmod_list.rs  module_exports.rs  module_list.rs  perf_test.rs  process_list.rs
hypervisor/: Cargo.toml
hypervisor-cheat/: Cargo.toml  HTTP.sys
hypervisor-cheat/src/: main.rs
hypervisor-cheat/src/rust_external/: mod.rs
hypervisor-cheat/src/vmsession/: bytesLargeFmt.rs  eprocess.rs  ethread.rs  fullpeb.rs  heap_entry.rs  list_entry.rs  mod.rs  nativebinding.rs  peb_bitfield.rs  peb_ldr_data.rs  proc_kernelinfo.rs  ptrforeign.rs  unicode_string.rs
hypervisor-cheat/src/vmsession/vm/: binding_core.rs  binding_init.rs  binding_porcelain.rs  binding_read.rs  binding_search.rs  mod.rs  nativebinding.rs
hypervisor-cheat/src/vmsession/win/: eprocess.rs  ethread.rs  heap_entry.rs  list_entry.rs  misc.rs  mod.rs  peb.rs  peb_ldr_data.rs  proc_heap_entry.rs  teb.rs  unicode_string.rs
hypervisor-cli/: Cargo.toml
hypervisor-cli/src/: asm.rs  main.rs
hypervisor-cli/src/rust_structs/: il2cpp.rs  mod.rs  ue.rs
hypervisor/src/: lib.rs
hypervisor/src/vm/: binding_core.rs  binding_porcelain.rs  mod.rs
hypervisor/src/win/: eprocess.rs  list_entry.rs  misc.rs  peb_bitfield.rs  peb_ldr_data.rs  proc_heap_entry.rs
isolated-kmodule/: Makefile  kmem.c  nixbuild.sh
libvirtdma/: Cargo.toml
libvirtdma/src/: lib.rs  proc_kernelinfo.rs
libvirtdma/src/vm/: binding_core.rs  binding_disasm.rs  binding_init.rs  binding_porcelain.rs  binding_read.rs  binding_rw.rs  binding_search.rs  mlayout.rs  mod.rs  nativebinding.rs
libvirtdma/src/win/: eprocess.rs  ethread.rs  heap_entry.rs  misc.rs  mod.rs  pe.rs  peb.rs  teb.rs  unicode_string.rs
src/: lib.rs  rwlist.rs  tlb.rs  win_context.rs  win_dll.rs  win_export.rs  win_process.rs
vmread-sys/: build.rs
vmread-sys/src/: lib.rs
vmread-sys/vmread/: Makefile  kmem.c  mem.c  nixbuild.sh  wintools.c
