[package]
name = "hypervisor-cheat"
version = "0.1.0"
authors = ["main <main@user>"]
edition = "2018"

[dependencies]
vmread = { path = "../" }
vmread-sys = { features = ["kmod_rw"], path = "../vmread-sys" }
hexdump = "0.1.0"
memmem = "0.1.1"
sha2 = "0.9.1"
byteorder = "1"
hex = "0.4.2"
bsdiff = "0.1.3"
regex = "1.3.9"
pelite = "0.8.1"
itertools = "0.9.0"
linefeed = "0.6.0"
libc = "0.2.71"
shlex = "0.1.1"
term-table = "1.3.0"
widestring = "0.4.2"
static_assertions = "1.1.0"
c2rust-bitfields = "0.3.0"
dirs = "3.0.0"
proc-maps = "0.1.6"
nix = "0.17.0"