[package]
name = "hypervisor-cli"
version = "0.1.0"
authors = ["Can Selcik <selcik.can@gmail.com>"]
edition = "2018"

[dependencies]
libvirtdma = { path = "../libvirtdma" }
hexdump = "0.1.0"
byteorder = "1"
hex = "0.4.2"
linefeed = "0.6.0"
shlex = "0.1.1"
dirs = "3.0.0"
ctrlc = "3.1.4"
dynasmrt = "0.7.1"
libc = "0.2.72"
colored = "1.9.3"
