[package]
name = "libvirtdma"
version = "0.1.0"
authors = ["Can Selcik <selcik.can@gmail.com>"]
edition = "2018"

[dependencies]
memmem = "0.1.1"
byteorder = "1"
regex = "1.3.9"
pelite = "0.8.1"
itertools = "0.9.0"
libc = "0.2.71"
term-table = "1.3.0"
widestring = "0.4.2"
static_assertions = "1.1.0"
c2rust-bitfields = "0.3.0"
proc-maps = "0.1.6"
nix = "0.17.0"
iced-x86 = "1.2.0"
colored = "1.9.3"